UserSalary is working properly, Added handling to backButton in Fragments , need to Add Schedule Handlers

--- a/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
@@ -7,10 +7,12 @@
     tools:context=".ui.storekeeper.StorekeeperActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textSakaryHoursText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Magazynier"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
