--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.coordinator.CoordinatorActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textSalaryRateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="173dp"
