--- a/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
@@ -15,4 +15,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonScheduleView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/schedule"
+        app:layout_constraintBottom_toTopOf="@+id/buttonUserList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
