--- a/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
@@ -22,18 +22,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/parcelListView"
-        android:layout_width="409dp"
-        android:layout_height="593dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/parcel_list_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="673dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAddParcel" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddParcel"
+        tools:layout_editor_absoluteX="1dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
