package list (all packages) not crashing anymore

--- a/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
@@ -26,8 +26,10 @@
         android:id="@+id/parcel_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="673dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonAddParcel"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAddParcel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
