--- a/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.courier.CourierActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="130dp"
-        android:layout_height="38dp"
-        android:text="Kurier"
+    <Button
+        android:id="@+id/buttonParcelList"
+        android:layout_width="413dp"
+        android:layout_height="62dp"
+        android:text="@string/parcel_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.946" />
 </androidx.constraintlayout.widget.ConstraintLayout>
