--- a/ParcelDelivery/app/src/main/res/layout/row_parcellist.xml
+++ b/ParcelDelivery/app/src/main/res/layout/row_parcellist.xml
@@ -6,8 +6,8 @@
     android:id="@+id/parentLayout">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/parcelImage"
         android:src="@mipmap/ic_launcher"/>
 
@@ -19,7 +19,8 @@
         android:layout_toRightOf="@+id/parcelImage"
         android:textColor="#000"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:textSize="17sp"/>
+        android:paddingBottom="10dp"
+        android:layout_marginLeft="100dp"
+        android:textSize="25sp"/>
 
 </RelativeLayout>
