--- a/ParcelDelivery/app/src/main/res/layout/activity_change_password.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_change_password.xml
@@ -62,11 +62,12 @@
         android:id="@+id/ID_VERIFY_PASSWORD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="100dp"
         android:text="DALEJ"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_OLD_PASSWORD" />
 </androidx.constraintlayout.widget.ConstraintLayout>
