--- a/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_manager.xml
@@ -26,6 +26,15 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/buttonMyAccount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/my_account"
+        app:layout_constraintBottom_toTopOf="@+id/buttonScheduleView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/buttonLogoutManag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
