Forgot password and main coordinator activity design + small fixes

--- a/ParcelDelivery/app/src/main/res/layout/activity_forgot_password.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,73 +8,68 @@
 
     <Button
         android:id="@+id/ID_PASSWORD_RESET_BUTTON"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
+        style="@style/buttonGreen"
+        android:layout_width="209dp"
+        android:layout_marginStart="103dp"
         android:layout_marginTop="42dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:text="ZRESETUJ HASLO"
+        android:layout_marginEnd="103dp"
+        android:text="ZRESETUJ HASŁO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_USERNAME_RESET" />
 
     <TextView
+        style="@style/textFieldGreen"
         android:id="@+id/ID_NOTE"
-        android:layout_width="332dp"
+        android:layout_width="300dp"
         android:layout_height="65dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="55dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_PASSWORD_RESET_BUTTON" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD" />
 
     <TextView
         android:id="@+id/ID_NEW_PASSWORD"
         android:layout_width="222dp"
         android:layout_height="44dp"
         android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
         android:gravity="center"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_PASSWORD_RESET_BUTTON" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_NEW_PASSWORD_TEXT" />
 
     <TextView
         android:id="@+id/ID_NEW_PASSWORD_TEXT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/textFieldGreen"
         android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="140dp"
-        android:layout_marginRight="140dp"
-        android:gravity="center"
-        android:text="Nowe haslo :"
+        android:text="Nowe hasło:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_PASSWORD_RESET_BUTTON" />
 
     <EditText
         android:id="@+id/ID_USERNAME_RESET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
+        style="@style/editTextField"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="66dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/hintEmail"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        style="@style/headerBackgroundGreen"
+        android:id="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
