--- a/ParcelDelivery/app/src/main/res/layout/activity_main.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_main.xml
@@ -7,53 +7,42 @@ android:layout_height="match_parent"
 tools:context=".ui.login.LoginActivity">
 
     <EditText
+        style="@style/editTextField"
         android:id="@+id/etName"
-        android:layout_width="279dp"
-        android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="66dp"
         android:layout_marginBottom="20dp"
         android:ems="10"
-        android:gravity="center"
         android:hint="@string/hintEmail"
         android:inputType="textPersonName"
-        android:textColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/etPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <EditText
+        style="@style/editTextField"
         android:id="@+id/etPassword"
-        android:layout_width="279dp"
-        android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:textColor="@color/colorPrimary"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="66dp"
         android:ems="10"
         android:hint="@string/hintPass"
-        android:gravity="center"
         android:inputType="textPassword"
-        android:textColorHint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etName" />
 
     <Button
+        style="@style/buttonGreen"
         android:id="@+id/btLogin"
-        android:layout_width="179dp"
-        android:layout_height="wrap_content"
         android:layout_marginStart="116dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="15dp"
-        android:background="@color/colorPrimary"
         android:text="Login"
-        android:textColor="#FFFFFF"
-        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/ID_PASSWORD_RESET"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,15 +50,13 @@ tools:context=".ui.login.LoginActivity">
 
     <TextView
         android:id="@+id/ID_PASSWORD_RESET"
+        style="@style/textFieldGreen"
         android:layout_width="199dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="106dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="106dp"
-        android:gravity="center"
         android:text="Nie pamiętasz hasła ?"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btLogin" />
