--- a/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_coordinator.xml
@@ -6,24 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.coordinator.CoordinatorActivity">
 
-    <TextView
-        android:id="@+id/textSalaryRateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginLeft="173dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginRight="159dp"
-        android:text="Koordynator"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/buttonParcelList"
+        style="@style/buttonGreen"
         android:layout_width="312dp"
-        android:layout_height="61dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="80dp"
@@ -34,13 +20,13 @@
 
     <Button
         android:id="@+id/ID_CHANGE_PASSWORD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
+        style="@style/buttonGreen"
+        android:layout_width="209dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginEnd="90dp"
         android:layout_marginBottom="15dp"
-        android:text="ZMIANA HASLA"
+        android:text="ZMIANA HASŁA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,14 +34,32 @@
 
     <Button
         android:id="@+id/buttonLogoutCoord"
-        android:layout_width="95dp"
-        android:layout_height="46dp"
+        style="@style/buttonGreen"
         android:layout_marginStart="164dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="159dp"
         android:text="Wyloguj"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.527"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textSalaryRateText" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        style="@style/headerBackgroundGreen"
+        android:id="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        style="@style/headerWhite"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="186dp"
+        android:layout_marginEnd="95dp"
+        android:text="Koordynator"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogoutCoord" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
